improve unit tests